# finch

./: .gitignore  .hgignore  CMakeLists.txt  COPYRIGHT  README  README.md  evaluation.fin  finch.gyp  init.fin  makefile  runtests  syntax.fin  syntax.fn  test.fin  to do.txt  traits.txt
base/: main.fin
benchmark/: fib.fin  fib.py  lexer.fin  results.txt  run.py
doc/: format.py  index.html  syntax highlight.psd  to do.txt
doc/Finch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
doc/finch/: setup.py
doc/finch/Finch.egg-info/: SOURCES.txt  entry_points.txt
doc/finch/finch/: __init__.py
doc/html/: expressions.html  index.html  styles.css
doc/markdown/: expressions.markdown  index.markdown  objects.markdown
doc/notes/: arithmetic.fin  class syntax.fin  ideas.fin  new syntax.fin  styleguide.txt  syntax.fin  test-syntax.fin
lib/: ast.fin  core.fin  lexer.fin  parser.fin  pretty-print.fin
sample/: 100doors.fin  ackermann.fin  complex.fin  complex2.fin  dragon.fin  fib.fin  fibers.fin  hello.fin  linkedlist.fin  objects.fin  self.fin  switch.fin
src/: ArrayExpr.h  ArrayObject.h  ArrayPrimitives.cpp  ArrayPrimitives.h  ArrayRef.h  BindExpr.h  BlockExpr.cpp  BlockExpr.h  BlockObject.cpp  BlockObject.h  BlockPrimitives.cpp  BlockPrimitives.h  BlockTable.cpp  BlockTable.h  CMakeLists.txt  CodeBlock.cpp  CodeBlock.h  Compiler.cpp  Compiler.h  Console.cpp  Console.h  ConsolePrimitives.h  DefExpr.cpp  DefExpr.h  DefineExpr.h  DynamicObject.cpp  DynamicObject.h  EvalContext.cpp  EvalContext.h  Evaluator.cpp  Evaluator.h  Expr.h  ExprVisitor.h  FileLineReader.cpp  FinchParser.cpp  FinchParser.h  IErrorReporter.h  IInterpreterHost.h  ILineReader.h  ITokenReader.h  (+70 more)
src/Base/: Array.h  CMakeLists.txt  Dict.cpp  Dict.h  Dictionary.h  FinchString.cpp  FinchString.h  Macros.h  Queue.h  Ref.cpp  Ref.h  Stack.h  String.cpp  String.h  StringTable.cpp  StringTable.h
src/Compiler/: Block.cpp  Block.h  BlockTable.cpp  BlockTable.h  CMakeLists.txt  CodeBlock.cpp  CodeBlock.h  Compiler.cpp  Compiler.h
src/Interpreter/: ArgReader.h  BlockObject.cpp  BlockObject.h  CMakeLists.txt  DynamicObject.cpp  DynamicObject.h  Environment.cpp  Environment.h  EvalContext.cpp  EvalContext.h  Evaluator.cpp  Evaluator.h  Fiber.cpp  Fiber.h  FileLineReader.cpp  FileLineReader.h  Interpreter.cpp  Interpreter.h  NumberObject.cpp  NumberObject.h  Object.cpp  Object.h  Primitives.cpp  Primitives.h  Process.cpp  Process.h  Scope.cpp  Scope.h  StringObject.cpp  StringObject.h  Upvalue.cpp  Upvalue.h
src/Interpreter/Objects/: ArrayObject.h  BlockObject.cpp  BlockObject.h  CMakeLists.txt  DynamicObject.cpp  DynamicObject.h  FiberObject.h  NumberObject.cpp  NumberObject.h  Object.cpp  Object.h  StringObject.cpp  StringObject.h
src/Interpreter/Primitives/: ArrayPrimitives.cpp  ArrayPrimitives.h  BlockPrimitives.cpp  BlockPrimitives.h  BooleanPrimitives.cpp  BooleanPrimitives.h  CMakeLists.txt  ConsolePrimitives.cpp  ConsolePrimitives.h  EnvironmentPrimitives.cpp  EnvironmentPrimitives.h  EtherPrimitives.cpp  EtherPrimitives.h  FiberPrimitives.cpp  FiberPrimitives.h  IoPrimitives.cpp  IoPrimitives.h  NilPrimitives.cpp  NilPrimitives.h  NumberPrimitives.cpp  NumberPrimitives.h  ObjectPrimitives.cpp  ObjectPrimitives.h  StringPrimitives.cpp  StringPrimitives.h
src/Syntax/: CMakeLists.txt  FinchParser.cpp  FinchParser.h  ILineReader.h  ITokenSource.h  Lexer.cpp  Lexer.h  LineNormalizer.cpp  LineNormalizer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
src/Syntax/AST/: ArrayExpr.h  BindExpr.h  BlockExpr.cpp  BlockExpr.h  CMakeLists.txt  DefExpr.cpp  DefExpr.h  DefineExpr.h  Expr.cpp  Expr.h  ExprVisitor.h  IExprCompiler.h  IExprVisitor.h  Identifier.cpp  Identifier.h  KeywordExpr.cpp  KeywordExpr.h  MessageExpr.h  NameExpr.cpp  NameExpr.h  NumberExpr.h  ObjectExpr.h  OperatorExpr.cpp  OperatorExpr.h  ReturnExpr.h  SelfExpr.h  SequenceExpr.cpp  SequenceExpr.h  SetExpr.cpp  SetExpr.h  StringExpr.cpp  StringExpr.h  SymbolExpr.cpp  UnaryExpr.h  UndefExpr.h  UndefineExpr.h  VarExpr.h
src/Test/: ArrayTests.cpp  ArrayTests.h  LexerTests.cpp  LexerTests.h  QueueTests.cpp  QueueTests.h  RefTests.cpp  RefTests.h  StackTests.cpp  StackTests.h  StringTests.cpp  StringTests.h  Test.cpp  Test.h  TestMain.cpp  TestMain.h  TokenTests.cpp  TokenTests.h
src/finch.xcodeproj/: bob.mode1v3  bob.pbxuser  project.pbxproj
support/textmate/Finch.tmbundle/: info.plist
support/textmate/Finch.tmbundle/Syntaxes/: Finch.tmLanguage
test/: arithmetic.fin  arrays.fin  booleans.fin  cascade.fin  comments.fin  fibers.fin  literals.fin  messages.fin  objects.fin  return.fin  scope.fin  self.fin  strings.fin  switch.fin  tco.fin  test.fin  variables.fin
